# depploy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dockerfile  download.sh  example_settings.toml  install.sh  languages.json  makefile  py_default  py_fastapi  settings.toml  test.sh
.github/: depploy.yaml
.github/workflows/: check.yml  ci.yaml  depploy.yml  release.yml
Formula/: depploy.rb
depploy/: Cargo.toml  build.rs
depploy-logic/: Cargo.toml
depploy-logic/src/: build.rs  commands.rs  conf.rs  io.rs  lib.rs
depploy-logic/src/common/: error.rs  models.rs  utils.rs
depploy-logic/src/generate/: files.rs  lang.rs  mod.rs
depploy-logic/src/models/: depploy.rs  gh_release.rs  language.rs  mod.rs
depploy-logic/src/prototype/: generate.rs  list.rs  logic.rs  mod.rs  upload.rs
depploy-logic/src/self_cmd/: update.rs
depploy-logic/src/self_update/: update.rs
depploy/src/: main.rs
example_configs/: conf.toml  conf.yml
pre-defined_dockerfiles/: rs_default
src/: build.rs  cli.rs  commands.rs  conf.rs  io.rs  main.rs  search.rs
src/generate/: files.rs  lang.rs
tests/: Cargo.toml
tests/src/: lib.rs
