[package]
name = "depploy"
version = "0.1.3"
edition = "2018"
description = "Depploy is a cli tool that makes it easy to create docker images, for every programming language."
author = "Michael Lichtenecker"
homepage = "https://github.com/MichaelProjects/depploy"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
shiplift = "0.7"
toml = "0.5.8"
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
