[package]
name = "depploy-logic"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
shiplift = "0.7"
toml = "0.5.8"
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
simple_logger = "2.1.0"
text_io = "0.1.10"
git2 = "0.14"
whoami = "1.2.1"
base64 = "0.13.0"
config = "0.11.0"
futures = "0.3"
cli-table = "0.4.7"
tar = "0.4"
tempfile = "3.3.0"
flate2 = "1.0.25"

[dev-dependencies]
pact_consumer = "0.10.0"